--- a/wabi/src/main/resources/application.properties
+++ b/wabi/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/wabi
 spring.datasource.username=root
 spring.datasource.password=yang326591
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
