--- a/wabi/src/main/resources/application.properties
+++ b/wabi/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.password=yang326591
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
