--- a/wabi/src/main/resources/application.properties
+++ b/wabi/src/main/resources/application.properties
@@ -1,9 +1,4 @@
 spring.application.name=wabi
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.profiles.active=prod
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
