--- a/wabi/src/main/resources/application-local.properties
+++ b/wabi/src/main/resources/application-local.properties
@@ -1,7 +1,11 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/banchango
+#spring.datasource.url=jdbc:mariadb://localhost:3306/banchango
+#spring.datasource.username=root
+#spring.datasource.password=yang326591
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/glog?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=yang326591
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.password=0322
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
