[Test][Feature] 이벤트 테스트 코드 & 기능 구현 (#4) (#8)
* feat : 테스트 코드 기초 골격

* style : test메서드 백틱 제거

* feat : BandFixture 생성

* test : 밴드에 속한 학생들을 조회할 수 있다.

* fix : Builder 수정에 따른 반영

* Test : 이벤트 생성에 대한 테스트 골격 생성

* test : 이벤트 생성시에 밴드를 추가할 수 있어야 한다.

* feat : 이벤트는 최대 수용가능한 인원을 지정할 수 있다.

* feat : 이벤트 생성을 위한 컨트롤러 구현

* fix : 오타 수정

* feat : 이벤트는 admin을 참조하며, 행사가 끝나는 시간을 포함한다.

* feat : Resposne에 data가 없을시 기본적으로 null을 할당한다

* feat : Response에 data가 할당되지 않을시 기본적으로 null을 적용

* feat : 이벤트 생성시 admin을 참조해야 한다.

* feat : 이벤트 생성 서비스 코드 작성 완료

* test : EventServiceTest 53라인 반환값 지정 보류

* test : Reflection으로 엔티티의 id 값을 지정할 수 있다.

* test : 서비스 테스트 구현 및 동작 확인 완료

* test: 유효하지_않은_밴드Id_값을_입력하면_NOT_FOUND_BAND_예외를_반환한다

* test: 밴드에_학생_정보를_저장한다

* refactor: 불필요한 import 삭제 & 불필요 MockBean 제거

* test : 이벤트 수정 테스트 코드 작성

* feat : 이벤트 수정 컨트롤러 및 DTO 작성

* feat : 이벤트를 수정하는 메서드 추가

* feat : 이벤트 수정 로직 구현 및 테스트 통과

* fix : HttpStatus에 600은 존재하지 않는다.

* feat : 이벤트 속성 NotNull처리

* feat : EventId가 동일하지 않아 수정할 수 없음에 따른 예외처리

* fix : Event객체의 startAt과 endAt은 null일 수 없다

* feat : getter 추가

* fix : event의 startAt과 endAt은 null일 수 없다

* test : 이벤트 단일조회 테스트 코드 작성

* feat : 이벤트 단일조회 기능 구현

* feat : 이벤트 단일조회 DTO

* test: 유효하지_않은_밴드Id_값을_입력하여_학생_정보를_저장하려하면_NOT_FOUND_BAND_예외를_반환한다

* refactor: test코드 주석 수정

* feat : 이벤트에 대한 권한이 없음

* test: 밴드를_생성한다

* test: 유효하지_않은_adminId_값을_입력하면_UNAUTHORIZED_REQUEST_예외를_반환한다

* feat: 유효하지_않은_adminId_값을_입력하면_UNAUTHORIZED_REQUEST_예외를_반환한다

* feat: 밴드를_생성한다

* test: 밴드를_삭제한다

* test: 밴드_삭제_시_유효하지_않은_adminId_값을_입력하면_UNAUTHORIZED_REQUEST_예외를_반환한다

* test: 밴드_삭제_시_유효하지_않은_bandId_값을_입력하면_NOT_FOUND_BAND_예외를_반환한다

* feat : admin 검증 로직 추가

* test: 밴드_삭제_시_학생명단이_추가된_밴드를_삭제_하려고_하면_ALREADY_ADD_STUDENT_예외를_반환한다

* chore : local 프로퍼티 ignore 처리

* chore : local 프로퍼티 제거

* feat: 밴드_삭제_시_유효하지_않은_bandId_값을_입력하면_NOT_FOUND_BAND_예외를_반환한다

* feat: 밴드_삭제_시_유효하지_않은_adminId_값을_입력하면_UNAUTHORIZED_REQUEST_예외를_

--- a/wabi/src/main/resources/application-prod.properties
+++ b/wabi/src/main/resources/application-prod.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
