feature: jwt 환경설정 값을 외부에서 주입되도록 한다 issue #22

--- a/wabi/src/main/resources/application-prod.properties
+++ b/wabi/src/main/resources/application-prod.properties
@@ -4,3 +4,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret-key=${JWT.KEY}
+jwt.expiration-hours=${JWT.EXPIRATION.HOURS}
+jwt.issuer=${JWT.ISSUER}
